devops/cicd/04. istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: msa-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway   # 기본 istio-ingressgateway 사용
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.k8s.com"       # 와일드카드 호스트
